# rumprun-sel4-demoapps

./: .licenseignore  CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md  apps.txt  config.txt  default.xml  master.xml  settings.cmake
.github/workflows/: rump-deploy.yml  test.yml
configs/: cjpeg-x86_64-x86_64_qemu_defconfig  djpeg-x86_64-x86_64_qemu_defconfig  erlang-x86_64-x86_64_qemu_defconfig  hello-ia32-optiplex9020_defconfig  hello-ia32-x86_64_qemu_defconfig  hello-x86_64-optiplex9020_defconfig  hello-x86_64-x86_64_qemu_defconfig  helloworld-rumprun-ia32_defconfig  helloworld-rumprun-x64_defconfig  iperf-overhead-rumprun-ia32_defconfig  iperf-rumprun-ia32_defconfig  iperf3-ia32-optiplex9020_defconfig  iperf3-ia32-x86_64_qemu_defconfig  leveldb-rumprun-x64_defconfig  leveldb-x86_64-optiplex9020_defconfig  leveldb-x86_64-x86_64_qemu_defconfig  madplay-x86_64-x86_64_qemu_defconfig  memcached-rumprun-x64_defconfig  memcached-x86_64-optiplex9020_defconfig  memcached-x86_64-x86_64_qemu_defconfig  multicore_pthread-x86_64-optiplex9020_defconfig  multicore_pthread-x86_64-x86_64_qemu_defconfig  netserver-rumprun-ia32_defconfig  nginx-ia32-optiplex9020_defconfig  nginx-ia32-x86_64_qemu_defconfig  nginx-rumprun-ia32_defconfig  notrt-redis-rumprun-x86_64_defconfig  pthread-affinity-test_defconfig  redis-ia32-optiplex9020_defconfig  redis-ia32-x86_64_qemu_defconfig  redis-rumprun-ia32_defconfig  redis-rumprun-x64_defconfig  redis-x86_64-optiplex9020_defconfig  redis-x86_64-x86_64_qemu_defconfig  rt-msi-redis-rumprun-x86_64_defconfig  rt-redis-rumprun-x86_64_defconfig  rust-rumprun-x64_defconfig  rust-x86_64-optiplex9020_defconfig  rust-x86_64-x86_64_qemu_defconfig
roottask/: CMakeLists.txt  Kbuild  Kconfig  Makefile
roottask/include/roottask_platform_config/: config.h  optiplex9020.h  x86_64_qemu.h
roottask/src/: common.h  main.c  serial_bench.c
roottask/src/arch/x86/: arch.c
roottask/src/plat/optiplex9020/: configuration.c
roottask/src/plat/x86_64_qemu/: configuration.c
scripts/: init-all.sh
userapps/: rumpcommon.mk
userapps/cjpeg/: Kbuild  Kconfig  Makefile  README.md
userapps/djpeg/: Kbuild  Kconfig  Makefile  README.md
userapps/erlang/: Kbuild  Kconfig  Makefile  README.md
userapps/hello/: CMakeLists.txt  Kbuild  Kconfig  Makefile  cmdline.h  settings.cmake
userapps/hello/src/: CMakeLists.txt  hello.c
userapps/iperf3/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md  cmdline.h  settings.cmake
userapps/iperf3/patches/: 0001-Iperf-Remove-mmap-write-flag.patch  0001-Iperf-Remove-mmap-write-flag.patch.license
userapps/jpeg/: CMakeLists.txt  README.md  settings.cmake
userapps/leveldb/: CMakeLists.txt  Kbuild  Kconfig  Makefile  cmdline.h  settings.cmake
userapps/lmbench/: Kbuild  Kconfig  Makefile  cmdline.h
userapps/mad/: README.md
userapps/madplay/: Kbuild  Kconfig  Makefile  README.md
userapps/memcached/: CMakeLists.txt  Kbuild  Kconfig  Makefile  cmdline.h  settings.cmake
userapps/multicore_pthread/: CMakeLists.txt  Kbuild  Kconfig  Makefile  cmdline.h  settings.cmake
userapps/multicore_pthread/src/: CMakeLists.txt  main.c
userapps/netserver/: Kbuild  Kconfig  Makefile  cmdline.h
userapps/nginx/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md  cmdline.h  directory.txt  settings.cmake
userapps/python/: Kbuild  Kconfig  Makefile  README.md  cmdline.h
userapps/redis/: CMakeLists.txt  Kbuild  Kconfig  Makefile  cmdline.h  directory.txt  settings.cmake
userapps/rust/: CMakeLists.txt  Cargo.toml  Kbuild  Kconfig  Makefile  README.md  cmdline.h  settings.cmake
userapps/rust/.cargo/: config
userapps/rust/src/: main.rs
userapps/susan/: CMakeLists.txt  Kbuild  Kconfig  Makefile  README.md  settings.cmake
